--- a/requirements_webui.txt
+++ b/requirements_webui.txt
@@ -1,14 +1,7 @@
-# PyTorch and its dependencies
-# These libraries include PyTorch and its related packages, supporting CUDA 11.8.
---extra-index-url https://download.pytorch.org/whl/cu118
-torch==2.0.1
-torchvision==0.15.2
-torchaudio==2.0.2
-# Installation source for PyTorch: -f https://download.pytorch.org/whl/cu118
-# Example installation command:
-
-# pip install torch==2.0.1 torchvision==0.15.2 torchaudio==2.0.2 --index-url https://download.pytorch.org/whl/cu118
-# pip install tb-nightly -i https://mirrors.aliyun.com/pypi/simple
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch
+torchvision
+torchaudio
 
 # General tools and libraries
 numba
